resolviendo bugs y agregando biografia de los devs

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -91,21 +91,12 @@
       <section class="container">
         <div class="text-center py-3">
           <h3>Acerca del los devs</h3>
-          <b
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-            consectetur, voluptate excepturi ipsum aliquid unde fugiat velit
-            quas ratione officiis tempora beatae recusandae, tempore odio ex id
-            temporibus vitae? Quasi.</b
-          >
+          <b>Somos un equipo de tres personas con muchas ganas de hacer algo propio. Este proyecto nacio con la idea de combinar dos cosas que nos gusta, la musica y el desarrolo web. Cada uno aporto algo distinto, ideas distintas al proceso, desde el diseño visual hasta la tipografia de la pagina. Trabajamos de forma colaborativa, repartiendo tareas y aprendiendo entre nosotros. A lo largo del desarrollo fuimos probando, corrigiendo errores y buscando siempre mejorar. Mas alla de lo tecnico, esto fue una experiencia que nos ayudo a entender como trabajar en equipo y lleva una idea a una buena pagina web</b>
         </div>
         <hr />
         <div class="text-center py-3">
           <h3>Frase que nos representa como equipo</h3>
-          <b
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
-            voluptatem assumenda repellendus aliquam ducimus quibusdam dolores
-            eos quasi officia consequatur?</b
-          >
+          <b>EROR404: telento no encontrado... porque ya lo tenemos.</b>
         </div>
         <hr />
         <div class="container">
@@ -124,8 +115,12 @@
                   I’m Walter, a multidisciplinary designer who focuses on
                   telling my clients’ stories visually, through enjoyable and
                   meaningful experiences. I specialize in responsive websites
-                  and functional user interfaces.
                 </p>
+                <ul class="d-flex gap-5">
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-github text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-linkedin text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-instagram text-light fa-xl"></i></a></li>
+                </ul>
               </div>
             </div>
             <div class="col-9 col-sm-12 col-md-6 col-lg-4">
@@ -142,8 +137,12 @@
                   I’m Walter, a multidisciplinary designer who focuses on
                   telling my clients’ stories visually, through enjoyable and
                   meaningful experiences. I specialize in responsive websites
-                  and functional user interfaces.
                 </p>
+                  <ul class="d-flex gap-5">
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-github text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-linkedin text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-instagram text-light fa-xl"></i></a></li>
+                </ul>
               </div>
             </div>
             <div class="col-9 col-sm-12 col-md-6 col-lg-3">
@@ -151,7 +150,7 @@
                 <div class="text-center">
                   <img
                     class="imagen-avatar-alvaro"
-                    src="../assets/img/avatar.png"
+                    src="../assets/img/foto-avatar-A.png"
                     alt=""
                   />
                 </div>
@@ -160,8 +159,12 @@
                   I’m Walter, a multidisciplinary designer who focuses on
                   telling my clients’ stories visually, through enjoyable and
                   meaningful experiences. I specialize in responsive websites
-                  and functional user interfaces.
                 </p>
+                  <ul class="d-flex gap-5">
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-github text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-linkedin text-light fa-xl"></i></a></li>
+                    <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-instagram text-light fa-xl"></i></a></li>
+                </ul>
               </div>
             </div>
           </div>
