pagina acerca de nosotros terminada

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -112,9 +112,7 @@
                 </div>
                 <h3 class="card-nombre pt-3">Alvaro Morillo</h3>
                 <p class="info">
-                  I’m Walter, a multidisciplinary designer who focuses on
-                  telling my clients’ stories visually, through enjoyable and
-                  meaningful experiences. I specialize in responsive websites
+                 Hola! soy Alvaro Morillo, tengo 22 años, estudio, trabajo y en mi tiempo libre me gusta programar (si es con un mate al lado, mejor). Mi proposito es dedicarme de tiempo completo a la programacion ya que cuando descubri este mundo me encanto. 
                 </p>
                 <ul class="d-flex gap-5">
                     <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-github text-light fa-xl"></i></a></li>
@@ -134,9 +132,7 @@
                 </div>
                 <h3 class="card-nombre pt-3">Patricio Romero</h3>
                 <p class="info">
-                  I’m Walter, a multidisciplinary designer who focuses on
-                  telling my clients’ stories visually, through enjoyable and
-                  meaningful experiences. I specialize in responsive websites
+                  Hola, soy Patricio Romero, tengo 20 años y actualmente soy estudiante de programacion. Desde que empece en este mundo, descubri una pasion por crear, resolver problemas y aprender constantemente cosas nuevas.
                 </p>
                   <ul class="d-flex gap-5">
                     <li class="puntos-lista"><a href="./error.html"><i class="fa-brands fa-github text-light fa-xl"></i></a></li>
