Pequeño cambio de color a las etiquetas <a>

--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
     </header>
     <div class="layout">
         <aside class="sidebar">
-            <nav>
-                <p class="section-title">Descubrir</p>
+            <nav class="iconos-sidebar">
+                <p class="section-title"><span>Descubrir</span></p>
                 <ul>
-                    <li><a href="./pages/error.html"><i class="fas fa-music"></i> Explorar música</a></li>
-                    <li><a href="./pages/error.html"><i class="fas fa-star"></i> Nuevos lanzamientos</a></li>
-                    <li><a href="./pages/error.html"><i class="fas fa-chart-line"></i> Más escuchados</a></li>
-                </ul>
+                    <li><a href="./pages/error.html"><i class="fas fa-music"></i> <span>Explorar música</span></a></li>
+                    <li><a href="./pages/error.html"><i class="fas fa-star"></i> <span>Nuevos lanzamientos</span></a></li>
+                    <li><a href="./pages/error.html"><i class="fas fa-chart-line icono-especial"></i> <span>Más escuchados</span></a></li>
 
-                <p class="section-title">Tu cuenta</p>
-                <ul>
-                    <li><a href="./pages/error.html"><i class="fas fa-heart"></i> Favoritos</a></li>
-                    <li><a href="./pages/error.html"><i class="fas fa-list"></i> Playlists</a></li>
+                    <span><p class="section-title">Tu cuenta</p></span>
+
+                    <li><a href="./pages/error.html"><i class="fas fa-heart"></i> <span>Favoritos</span></a></li>
+                    <li><a href="./pages/error.html"><i class="fas fa-list"></i> <span>Playlists</span></a></li>
                 </ul>
                 <br>
                 <article class="playlist">
