solucin en tamaño de pantalla de suscripcion

--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -21,7 +21,7 @@
             <div class="container-fluid d-flex">
                 <a class="navbar-brand px-5" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
                         alt="imagen de logo " /></a>
-                <form class="d-flex" role="search">
+                        <form class="d-flex" role="search"></form>
                     <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
                         placeholder="¿Qué deseas escuchar?" aria-label="Search" />
                 </form>
