--- a/pages/error.html
+++ b/pages/error.html
@@ -89,7 +89,7 @@
       </nav>
     </header>
     <main>
-      <section class="container text-center">
+      <section class="container text-center contenedor">
         <img
           class="imagen-404"
           src="../assets/img/error404-png-.png"
