--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -64,19 +64,19 @@
             <h2>Individual</h2>
             <div class="price">$0.99/mes</div>
             <p>Acceso completo para una persona.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
         <div class="card">
             <h2>Dúo</h2>
             <div class="price">$17.99/mes</div>
             <p>Acceso completo para dos personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
         <div class="card">
             <h2>Familiar</h2>
             <div class="price">$29.99/mes</div>
             <p>Acceso completo para hasta cinco personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
     </div>
     <div class="faq">
