--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,29 +24,62 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../styles/contacto.css" />
+    <link rel="stylesheet" href="../styles/index.css">
 
   <body>
-    <header></header>
+    <header class="nav-borroso fixed-top">
+        <nav class="navbar navbar-expand-lg mx-3">
+            <div class="container-fluid d-flex">
+                <a class="navbar-brand px-5" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
+                        alt="imagen de logo " /></a>
+                <form class="d-flex" role="search">
+                    <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
+                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
+                </form>
+                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" aria-current="page" href="../index.html">INICIO</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
       <section>
         <h3>Contacta con nosotros</h3>
         <h1>No lo dude!</h1>
         <article class="contactos">
-          <div>
-            <i class="fa-solid fa-location-dot fa-3x"></i>
-            <h2>Localidad</h2>
-            <p>General Paz 576 Piso 9, Oficina 2 4000 San Miguel de Tucumán</p>
-          </div>
-          <div>
-            <i class="fa-solid fa-phone fa-3x"></i>
-            <h2>Teléfono</h2>
-            <p>+54 0381 578-3030</p>
-          </div>
-          <div>
-            <i class="fa-solid fa-envelope fa-3x"></i>
-            <h2>Email</h2>
-            <p>rollingcode@gmail.com</p>
-          </div>
+            <div>
+              <i class="fa-solid fa-location-dot fa-3x"></i>
+              <h2>Localidad</h2>
+              <p>General Paz 576 Piso 9, Oficina 2 4000 San Miguel de Tucumán</p>
+            </div>
+            <div>
+              <i class="fa-solid fa-phone fa-3x"></i>
+              <h2>Teléfono</h2>
+              <p>+54 0381 578-3030</p>
+            </div>
+            <div>
+              <i class="fa-solid fa-envelope fa-3x"></i>
+              <h2>Email</h2>
+              <p>rollingcode@gmail.com</p>
+            </div>
         </article>
         <article class="forms">
             <form class="formulario-contacto">
@@ -92,7 +125,52 @@
         </article>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="container-fluid">
+            <div class="row text-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
+                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                            alt="imagen de logo de la pagina"></a>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Redes sociales</b>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>sobre la empresa</b>
+                        <li class="py-3"><a class="links-footer" href="nosotros.html">Acerca de
+                                nosotros</a></li>
+                        <li class="py-2"><a class="links-footer" href="contacto.html">Contacto por
+                                consultas</a></li>
+                        <li class="py-3"><a class="links-footer" href="error.html">Ayuda</a></li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Membresias</b>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Individual</a></li>
+                        <li class="py-2"><a class="links-footer" href="suscripcion.html">Plan Duo</a>
+                        </li>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Familiar</a></li>
+                    </ul>
+                </div>
+            </div>
+            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
+        </section>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
