--- a/pages/rock.html
+++ b/pages/rock.html
@@ -69,7 +69,17 @@
                 <article class="playlist">
                     <h4><b>Crea tu primera playlist</b></h4>
                     <p class="playlist-texto">¡Es muy fácil! Te vamos a ayudar</p>
-                    <button class="playlist-boton">Crear Playlist</button>
+                    <a href="./pages/error.html">
+                        <button class="playlist-boton">Crear Playlist</button>
+                    </a>
+                </article>
+                <br>
+                <article class="playlist">
+                    <h4><b>Busquemos algunos podcasts</b></h4>
+                    <p class="playlist-texto">¡Te mantendremos al tanto!</p>
+                    <a href="./pages/error.html">
+                        <button class="playlist-boton">Explorar</button>
+                    </a>
                 </article>
             </nav>
         </aside>
@@ -83,7 +93,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -111,7 +122,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -139,7 +151,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -167,7 +180,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -195,7 +209,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -223,7 +238,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -251,7 +267,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -279,7 +296,8 @@
                             style="text-decoration: none; color: inherit;">
                             <article class="cancion" type="button">
                                 <div class="cover">
-                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png" alt="Portada canción">
+                                    <img class="img-cancion" src="../assets/img/canciones/Flaca.png"
+                                        alt="Portada canción">
                                     <div class="play-icon"></div>
                                 </div>
                                 <div class="info">
@@ -315,7 +333,8 @@
                     <div class="canciones">
                         <article class="cancion">
                             <div class="cover">
-                                <img class="img-artista" src="../assets/img/artistas/emilia_mernes.png" alt="Portada canción">
+                                <img class="img-artista" src="../assets/img/artistas/emilia_mernes.png"
+                                    alt="Portada canción">
                                 <div class="play-icon"></div>
                             </div>
                             <div class="info">
@@ -325,7 +344,8 @@
                         </article>
                         <article class="cancion">
                             <div class="cover">
-                                <img class="img-artista" src="../assets/img/artistas/Bizarrap.png" alt="Portada canción">
+                                <img class="img-artista" src="../assets/img/artistas/Bizarrap.png"
+                                    alt="Portada canción">
                                 <div class="play-icon"></div>
                             </div>
                             <div class="info">
@@ -335,7 +355,8 @@
                         </article>
                         <article class="cancion">
                             <div class="cover">
-                                <img class="img-artista" src="../assets/img/artistas/J Balvin.png" alt="Portada canción">
+                                <img class="img-artista" src="../assets/img/artistas/J Balvin.png"
+                                    alt="Portada canción">
                                 <div class="play-icon"></div>
                             </div>
                             <div class="info">
@@ -345,7 +366,8 @@
                         </article>
                         <article class="cancion">
                             <div class="cover">
-                                <img class="img-artista" src="../assets/img/artistas/Maria Becerra.png" alt="Portada canción">
+                                <img class="img-artista" src="../assets/img/artistas/Maria Becerra.png"
+                                    alt="Portada canción">
                                 <div class="play-icon"></div>
                             </div>
                             <div class="info">
@@ -381,30 +403,47 @@
                 <section class="container-fluid">
                     <div class="row text-center">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
-                            <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png" alt="imagen de logo de la pagina"></a>
+                            <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                                    alt="imagen de logo de la pagina"></a>
                         </div>
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
-                            <b>Redes sociales</b>
-                                <li><a class="links-footer" href="https://www.instagram.com/alvaro.morillo/?__pwa=1#" target="_blank"><i class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
-                                <li><a class="links-footer" href="https://x.com/alvaromorillo13?s=11&t=INakPXAa_P5f1wRO6c-OeQ" target="_blank"><i class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
-                                <li><a class="links-footer" href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
+                                <b>Redes sociales</b>
+                                <li><a class="links-footer" href="https://www.instagram.com/alvaro.morillo/?__pwa=1#"
+                                        target="_blank"><i
+                                            class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                                </li>
+                                <li><a class="links-footer"
+                                        href="https://x.com/alvaromorillo13?s=11&t=INakPXAa_P5f1wRO6c-OeQ"
+                                        target="_blank"><i
+                                            class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                                </li>
+                                <li><a class="links-footer"
+                                        href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA"
+                                        target="_blank"><i
+                                            class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
                                 <b>sobre la empresa</b>
-                                <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de nosotros</a></li>
-                                <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por consultas</a></li>
+                                <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de
+                                        nosotros</a></li>
+                                <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por
+                                        consultas</a></li>
                                 <li class="py-3"><a class="links-footer" href="./pages/error.html">Ayuda</a></li>
                             </ul>
                         </div>
                         <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                             <ul class="puntos-lista">
                                 <b>Membresias</b>
-                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Individual</a></li>
-                                <li class="py-2"><a class="links-footer" href="./pages/suscripcion.html">Plan Duo</a></li>
-                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Familiar</a></li>
+                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan
+                                        Individual</a></li>
+                                <li class="py-2"><a class="links-footer" href="./pages/suscripcion.html">Plan Duo</a>
+                                </li>
+                                <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan
+                                        Familiar</a></li>
                             </ul>
                         </div>
                     </div>
@@ -413,8 +452,53 @@
             </footer>
         </div>
     </div>
-        
-    <footer></footer>
+
+    <footer>
+        <section class="container-fluid">
+            <div class="row text-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
+                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                            alt="imagen de logo de la pagina"></a>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Redes sociales</b>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>sobre la empresa</b>
+                        <li class="py-3"><a class="links-footer" href="nosotros.html">Acerca de
+                                nosotros</a></li>
+                        <li class="py-2"><a class="links-footer" href="contacto.html">Contacto por
+                                consultas</a></li>
+                        <li class="py-3"><a class="links-footer" href="error.html">Ayuda</a></li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Membresias</b>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Individual</a></li>
+                        <li class="py-2"><a class="links-footer" href="suscripcion.html">Plan Duo</a>
+                        </li>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Familiar</a></li>
+                    </ul>
+                </div>
+            </div>
+            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
+        </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
