--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -51,47 +51,91 @@
     </header>
     <main>
         <div class="offer-container">
-        <div class="offer">
-            <h1>¡Oferta Especial de Suscripción!</h1>
-            <p>Obtenga un 20% de descuento en su primer mes.</p>
+            <div class="offer">
+                <h1>¡Oferta Especial de Suscripción!</h1>
+                <p>Obtenga un 20% de descuento en su primer mes.</p>
+            </div>
+            <div class="logo">
+                <img src="../assets/img/logoynombre.png" alt="Logo">
+            </div>
         </div>
-        <div class="logo">
-            <img src="../assets/img/logoynombre.png" alt="Logo">
+        <div class="plans">
+            <div class="card">
+                <h2>Individual</h2>
+                <div class="price">$0.99/mes</div>
+                <p>Acceso completo para una persona.</p>
+                <button class="subscribe-btn">Suscribirse</button>
+            </div>
+            <div class="card">
+                <h2>Dúo</h2>
+                <div class="price">$17.99/mes</div>
+                <p>Acceso completo para dos personas.</p>
+                <button class="subscribe-btn">Suscribirse</button>
+            </div>
+            <div class="card">
+                <h2>Familiar</h2>
+                <div class="price">$29.99/mes</div>
+                <p>Acceso completo para hasta cinco personas.</p>
+                <button class="subscribe-btn">Suscribirse</button>
+            </div>
         </div>
-    </div>
-    <div class="plans">
-        <div class="card">
-            <h2>Individual</h2>
-            <div class="price">$0.99/mes</div>
-            <p>Acceso completo para una persona.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+        <div class="faq">
+            <h2>¿TIENES PREGUNTAS?</h2>
+            <h3>Tenemos las respuestas</h3>
+            <ul class="faq-list">
+                <li>¿Cómo funciona la prueba de Vibra Premium?</li>
+                <li>¿Cómo cancelo mi plan premium?</li>
+                <li>¿Cómo funciona el plan Dúo?</li>
+                <li>¿Cómo funciona el plan Familiar?</li>
+            </ul>
         </div>
-        <div class="card">
-            <h2>Dúo</h2>
-            <div class="price">$17.99/mes</div>
-            <p>Acceso completo para dos personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
-        </div>
-        <div class="card">
-            <h2>Familiar</h2>
-            <div class="price">$29.99/mes</div>
-            <p>Acceso completo para hasta cinco personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
-        </div>
-    </div>
-    <div class="faq">
-        <h2>¿TIENES PREGUNTAS?</h2>
-        <h3>Tenemos las respuestas</h3>
-        <ul class="faq-list">
-            <li>¿Cómo funciona la prueba de Vibra Premium?</li>
-            <li>¿Cómo cancelo mi plan premium?</li>
-            <li>¿Cómo funciona el plan Dúo?</li>
-            <li>¿Cómo funciona el plan Familiar?</li>
-        </ul>
-    </div> 
     </main>
-    
+
     <footer>
+        <section class="container-fluid">
+            <div class="row text-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
+                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                            alt="imagen de logo de la pagina"></a>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Redes sociales</b>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                                    class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>sobre la empresa</b>
+                        <li class="py-3"><a class="links-footer" href="nosotros.html">Acerca de
+                                nosotros</a></li>
+                        <li class="py-2"><a class="links-footer" href="contacto.html">Contacto por
+                                consultas</a></li>
+                        <li class="py-3"><a class="links-footer" href="error.html">Ayuda</a></li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Membresias</b>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Individual</a></li>
+                        <li class="py-2"><a class="links-footer" href="suscripcion.html">Plan Duo</a>
+                        </li>
+                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                                Familiar</a></li>
+                    </ul>
+                </div>
+            </div>
+            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
