--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,180 +1,24 @@
 <!DOCTYPE html>
 <html lang="es_AR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Proyecto 1: Vibra" />
-    <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
-    <meta
-      name="keywords"
-      content="Música, Vibra, Ritmo, Melodía, Canción, Letra"
-    />
-    <meta
-      name="author"
-      content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"
-    />
-    <script
-      src="https://kit.fontawesome.com/6637e0286d.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../styles/contacto.css" />
-    <link rel="stylesheet" href="../styles/index.css">
 
-  <body>
-    <header class="nav-borroso fixed-top">
-        <nav class="navbar navbar-expand-lg mx-3">
-            <div class="container-fluid d-flex">
-                <a class="navbar-brand px-5" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
-                        alt="imagen de logo " /></a>
-                <form class="d-flex" role="search">
-                    <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
-                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
-                </form>
-                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" aria-current="page" href="../index.html">INICIO</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main>
-      <section>
-        <h3>Contacta con nosotros</h3>
-        <h1>No lo dude!</h1>
-        <article class="contactos">
-            <div>
-              <i class="fa-solid fa-location-dot fa-3x"></i>
-              <h2>Localidad</h2>
-              <p>General Paz 576 Piso 9, Oficina 2 4000 San Miguel de Tucumán</p>
-            </div>
-            <div>
-              <i class="fa-solid fa-phone fa-3x"></i>
-              <h2>Teléfono</h2>
-              <p>+54 0381 578-3030</p>
-            </div>
-            <div>
-              <i class="fa-solid fa-envelope fa-3x"></i>
-              <h2>Email</h2>
-              <p>rollingcode@gmail.com</p>
-            </div>
-        </article>
-        <article class="forms">
-            <form class="formulario-contacto">
-            <h2>Contacto</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Proyecto 1: Vibra">
+    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
+    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <title>Vibra</title>
+</head>
 
-            <div class="campo">
-              <label for="correo" class="etiqueta">Correo electrónico</label>
-              <input
-                type="email"
-                id="correo"
-                name="correo"
-                class="entrada"
-                placeholder="tucorreo@ejemplo.com"
-                required
-              />
-            </div>
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+</body>
 
-            <div class="campo">
-              <label for="mensaje" class="etiqueta">Mensaje</label>
-              <textarea
-                minlength="10"
-                maxlength="200"
-                id="mensaje"
-                name="mensaje"
-                class="entrada"
-                rows="5"
-                placeholder="Escribe tu mensaje aquí..."
-                required
-              ></textarea>
-            </div>
-
-            <button href="./error.html" type="submit" class="boton-enviar">Enviar mensaje</button>
-          </form>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1059174722677!2d-65.20974192477854!3d-26.83658327669254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses!2sar!4v1752532495858!5m2!1ses!2sar"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </article>
-      </section>
-    </main>
-    <footer>
-        <section class="container-fluid">
-            <div class="row text-center">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
-                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
-                            alt="imagen de logo de la pagina"></a>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                        <b>Redes sociales</b>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
-                                    class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
-                        </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
-                                    class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
-                        </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
-                                    class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                        <b>sobre la empresa</b>
-                        <li class="py-3"><a class="links-footer" href="nosotros.html">Acerca de
-                                nosotros</a></li>
-                        <li class="py-2"><a class="links-footer" href="contacto.html">Contacto por
-                                consultas</a></li>
-                        <li class="py-3"><a class="links-footer" href="error.html">Ayuda</a></li>
-                    </ul>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                        <b>Membresias</b>
-                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
-                                Individual</a></li>
-                        <li class="py-2"><a class="links-footer" href="suscripcion.html">Plan Duo</a>
-                        </li>
-                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
-                                Familiar</a></li>
-                    </ul>
-                </div>
-            </div>
-            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
-        </section>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
