--- a/pages/login.html
+++ b/pages/login.html
@@ -7,79 +7,15 @@
     <meta name="description" content="Proyecto 1: Vibra">
     <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
     <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
-    <script src="https://kit.fontawesome.com/6637e0286d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/login.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
     <title>Vibra</title>
 </head>
 
 <body>
-    <header class="nav-borroso fixed-top">
-        <nav class="navbar navbar-expand-lg mx-3">
-            <div class="container-fluid d-flex">
-                <a class="navbar-brand px-5" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
-                        alt="imagen de logo " /></a>
-                <form class="d-flex" role="search">
-                    <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
-                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
-                </form>
-                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" aria-current="page" href="../index.html">INICIO</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="form-contenedor">
-            <h1>Login</h1>
-            <form>
-                <div class="formulario-input">
-                    <label>Usuario</label>
-                    <input type="text" id="username">
-                </div>
-                <div class="formulario-input">
-                    <label>Contraseña</label>
-                    <input type="password" id="password">
-                    <div class="contraseña-olvidada">
-                        <a href="./error.html">Olvidaste tu contraseña?</a>
-                    </div>
-                </div>
-                <a href="./error.html" class="logearse">Unirme</a>
-            </form>
-            <div class="sociales">
-                <p class="message">Login with social accounts</p>
-            </div>
-            <div class="sociales-iconos">
-                <i class="fa-brands fa-google fa-2x"></i>
-                <i class="fa-brands fa-github fa-2x"></i>
-                <i class="fa-brands fa-spotify fa-2x"></i>
-            </div>
-            <p class="registro">Don't have an account?
-                <a href="./error.html" class="">Sign up</a>
-            </p>
-        </section>
-    </main>
+    <header></header>
+    <main></main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
