--- a/pages/error.html
+++ b/pages/error.html
@@ -1,106 +1,24 @@
 <!DOCTYPE html>
 <html lang="es_AR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Proyecto 1: Vibra" />
-    <meta
-      name="keywords"
-      content="Música, Vibra, Ritmo, Melodía, Canción, Letra"
-    />
-    <meta
-      name="author"
-      content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"
-    />
-    <script
-      src="https://kit.fontawesome.com/6637e0286d.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../styles/error404.css" />
-    <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
-    <title>Vibra</title>
-  </head>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg mx-3">
-        <div class="container-fluid d-flex">
-          <a class="navbar-brand px-4" href="index.html"
-            ><img
-              class="imagen-loogo"
-              src="../assets/img/logo.png"
-              alt="imagen de logo "
-          /></a>
-          <form class="d-flex" role="search">
-            <input
-              class="barra-busqueda form-control me-2 rounded-5 text-center px-5"
-              type="search"
-              placeholder="¿que deseas escuchar?"
-              aria-label="Search"
-            />
-          </form>
-          <button
-            class="navbar-toggler bg-light"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <hr />
-              <li class="nav-item">
-                <a
-                  class="efectos nav-link text-center"
-                  aria-current="page"
-                  href="index.html"
-                  >INICIO</a
-                >
-              </li>
-              <hr />
-              <li class="nav-item">
-                <a
-                  class="efectos nav-link text-center"
-                  href="./pages/suscripcion.html"
-                  >SUSCRIPCION</a
-                >
-              </li>
-              <hr />
-              <li class="nav-item">
-                <a
-                  class="efectos nav-link text-center"
-                  href="./pages/login.html"
-                  >LOGIN</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section class="container text-center contenedor">
-        <img
-          class="imagen-404"
-          src="../assets/img/error404-png-.png"
-          alt="imagen de error 404 de la pagina"
-        />
-      </section>
-    </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Proyecto 1: Vibra">
+    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
+    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <title>Vibra</title>
+</head>
+
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
