resolviendo rutas de carpetas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,11 +49,11 @@
                         </li>
                         <hr>
                         <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
+                            <a class="efectos nav-link text-center" href="./suscripcion.html">SUSCRIPCION</a>
                         </li>
                         <hr>
                         <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
+                            <a class="efectos nav-link text-center" href="./login.html">LOGIN</a>
                         </li>
                     </ul>
                 </div>
@@ -129,19 +129,19 @@
         <section class="container-fluid">
             <div class="row text-center">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
-                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                    <a href="../index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
                             alt="imagen de logo de la pagina"></a>
                 </div>
                 <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                         <b>Redes sociales</b>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
                     </ul>
