--- a/pages/login.html
+++ b/pages/login.html
@@ -39,7 +39,7 @@
                         </li>
                         <hr>
                         <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
+                            <a class="efectos nav-link text-center" href="./suscripcion.html">SUSCRIPCION</a>
                         </li>
                         <hr>
                         <li class="nav-item">
