--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -42,7 +42,7 @@
                         </li>
                         <hr>
                         <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
+                            <a class="efectos nav-link text-center" href="./login.html">LOGIN</a>
                         </li>
                     </ul>
                 </div>
@@ -65,19 +65,19 @@
             <h2>Individual</h2>
             <div class="price">$0.99/mes</div>
             <p>Acceso completo para una persona.</p>
-            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
         <div class="card">
             <h2>Dúo</h2>
             <div class="price">$17.99/mes</div>
             <p>Acceso completo para dos personas.</p>
-            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
         <div class="card">
             <h2>Familiar</h2>
             <div class="price">$29.99/mes</div>
             <p>Acceso completo para hasta cinco personas.</p>
-            <a href="error.html"><button class="subscribe-btn">Suscribirse</button></a>
+            <a href="./error.html"><button class="subscribe-btn">Suscribirse</button></a>
         </div>
     </div>
     <div class="faq">
@@ -96,19 +96,19 @@
         <section class="container-fluid">
             <div class="row text-center">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
-                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
+                    <a href="../index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png"
                             alt="imagen de logo de la pagina"></a>
                 </div>
                 <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                         <b>Redes sociales</b>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
-                        <li><a class="links-footer" href="error.html" target="_blank"><i
+                        <li><a class="links-footer" href="./error.html"><i
                                     class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a>
                         </li>
                     </ul>
@@ -116,21 +116,21 @@
                 <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                         <b>sobre la empresa</b>
-                        <li class="py-3"><a class="links-footer" href="nosotros.html">Acerca de
+                        <li class="py-3"><a class="links-footer" href="./nosotros.html">Acerca de
                                 nosotros</a></li>
-                        <li class="py-2"><a class="links-footer" href="contacto.html">Contacto por
+                        <li class="py-2"><a class="links-footer" href="./contacto.html">Contacto por
                                 consultas</a></li>
-                        <li class="py-3"><a class="links-footer" href="error.html">Ayuda</a></li>
+                        <li class="py-3"><a class="links-footer" href="./error.html">Ayuda</a></li>
                     </ul>
                 </div>
                 <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                         <b>Membresias</b>
-                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                        <li class="py-3"><a class="links-footer" href="./suscripcion.html">Plan
                                 Individual</a></li>
-                        <li class="py-2"><a class="links-footer" href="suscripcion.html">Plan Duo</a>
+                        <li class="py-2"><a class="links-footer" href="./suscripcion.html">Plan Duo</a>
                         </li>
-                        <li class="py-3"><a class="links-footer" href="suscripcion.html">Plan
+                        <li class="py-3"><a class="links-footer" href="./suscripcion.html">Plan
                                 Familiar</a></li>
                     </ul>
                 </div>
