--- a/pages/error.html
+++ b/pages/error.html
@@ -31,7 +31,7 @@
     <header>
       <nav class="navbar navbar-expand-lg mx-3">
         <div class="container-fluid d-flex">
-          <a class="navbar-brand px-4" href="index.html"
+          <a class="navbar-brand px-4" href="../index.html"
             ><img
               class="imagen-loogo"
               src="../assets/img/logo.png"
@@ -71,7 +71,7 @@
               <li class="nav-item">
                 <a
                   class="efectos nav-link text-center"
-                  href="./pages/suscripcion.html"
+                  href="./suscripcion.html"
                   >SUSCRIPCION</a
                 >
               </li>
@@ -79,7 +79,7 @@
               <li class="nav-item">
                 <a
                   class="efectos nav-link text-center"
-                  href="./pages/login.html"
+                  href="./login.html"
                   >LOGIN</a
                 >
               </li>
